# coqui_tts_ros

./: CMakeLists.txt  README.md  README_en.md  install.sh  package.xml
launch/: tts.launch
models/: .gitignore  model_list.yaml
script/: tts.py
